nanopore-tracking-app/deployment/openshift/hpa.yaml
apiVersion: v1
kind: Service
metadata:
  name: nanopore-tracking-app-service
  labels:
    app: nanopore-tracking-app
spec:
  selector:
    app: nanopore-tracking-app
  ports:
  - name: http
    port: 80
    targetPort: 3001
    protocol: TCP
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nanopore-tracking-route
  labels:
    app: nanopore-tracking-app
spec:
  host: nanopore-tracking-route-dept-barc.apps.cloudapps.unc.edu
  to:
    kind: Service
    name: nanopore-tracking-app-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
